@@ -1,8 +1,8 @@
 #! /bin/sh
 
-for i in *.prolog
+for i in *.dl
 do
-  b=`basename $i .prolog`
+  b=`basename $i .dl`
   ./datalog $i | sort > $b.out
   diff -u $b.txt $b.out
 done
